Style user messages

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -40,8 +40,14 @@
 // --------
 
 @import "patterns/toggle-content";
+@import "patterns/announcements";
 
 // Modules
 // -------
 
 @import "modules/logo";
+
+// Plugins
+// -------
+
+@import "plugins/messages"
