--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -183,12 +183,12 @@ a:focus, a:hover, a:active {
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?1370481628') format("woff"), url('../fonts/knet.ttf?1370481628') format("truetype");
+  src: url('../fonts/knet.woff?1370488090') format("woff"), url('../fonts/knet.ttf?1370488090') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
-#messages .close:before, .announce:before, .message:before, [data-icon]:before {
+.user-nav [name="logout"]:before, #messages .close:before, .user-nav .fb-login:before, .announce:before, .message:before, [data-icon]:before {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -197,7 +197,7 @@ a:focus, a:hover, a:active {
   speak: none;
 }
 
-#messages .close {
+.user-nav [name="logout"], #messages .close {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -205,7 +205,7 @@ a:focus, a:hover, a:active {
   min-width: 1em;
   text-indent: -9999px;
 }
-#messages .close:before {
+.user-nav [name="logout"]:before, #messages .close:before {
   position: absolute;
   top: 0;
   left: 0;
@@ -222,6 +222,10 @@ a:focus, a:hover, a:active {
   content: "\e006";
 }
 
+.user-nav .fb-login:before {
+  content: "\e007";
+}
+
 .announce:before, .message:before {
   content: "\e008";
 }
@@ -236,6 +240,10 @@ a:focus, a:hover, a:active {
 
 .message.error:before {
   content: "\e00b";
+}
+
+.user-nav [name="logout"]:before {
+  content: "\e00c";
 }
 
 button {
@@ -393,6 +401,29 @@ label {
   color: #4c4c4c;
 }
 [role="banner"] .org:focus, [role="banner"] .org:hover, [role="banner"] .org:active {
+  color: #94001a;
+}
+
+.brand {
+  width: 40%;
+  float: left;
+}
+
+.user-nav {
+  width: 60%;
+  float: left;
+  text-align: right;
+}
+.user-nav .fb-login:before {
+  padding-right: 0.31944rem;
+}
+.user-nav .user-name, .user-nav .logout-form {
+  display: inline-block;
+}
+.user-nav [name="logout"] {
+  padding: 0 0.31944rem;
+}
+.user-nav [name="logout"]:focus, .user-nav [name="logout"]:hover, .user-nav [name="logout"]:active {
   color: #94001a;
 }
 
